--- a/index.html
+++ b/index.html
@@ -15,18 +15,30 @@
     <h1>ToDo-list</h1>
 
 
-    <div class="list-container">
+
       <div class="list">
-        <div><span>Bread</span><button class="btn delete-btn">X</button></div>
-        <div><span>Bread</span><button class="btn delete-btn">X</button></div>
-        <div><span>Bread</span><button class="btn delete-btn">X</button></div>
-        <div><span>Bread</span><button class="btn delete-btn">X</button></div>
+
+        <div class="todo">
+          <div class="todo-text">Example</div>
+          <button class="btn delete-btn">X</button>
+        </div>
+
+        <div class="todo">
+          <div class="todo-text">Example</div>
+          <button class="btn delete-btn">X</button>
+        </div>
+
+        <div class="todo">
+          <div class="todo-text">Example</div>
+          <button class="btn delete-btn">X</button>
+        </div>
+        
       </div>
       <div class="btns-container">
         <button class="btn" onclick="addItem()">Add</button>
         <button class="btn" onclick="clearList()">Remove</button>
       </div>
-    </div>
+    
   </div>
   <script src="app.js"></script>
 </body>
